--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,9 @@
     %meta{:content => "", :name => "description"}/
     %meta{:content => "Mark Otto, Jacob Thornton, and Bootstrap contributors", :name => "author"}/
     %meta{:content => "Jekyll v3.8.6", :name => "generator"}/
+    %link{:href => image_path("apple-touch-icon.png"), :rel => "apple-touch-icon", :sizes => "180x180"}/
+    %link{:href => image_path("favicon-32x32.png"), :rel => "icon", :sizes => "32x32", :type => "image/png"}/
+    %link{:href => image_path("favicon-16x16.png"), :rel => "icon", :sizes => "16x16", :type => "image/png"}/
     %title Journaled
     = csrf_meta_tags
     = csp_meta_tag
