--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,12 +5,10 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1, shrink-to-fit=no", :name => "viewport"}/
     %meta{:content => "", :name => "description"}/
-    %meta{:content => "Mark Otto, Jacob Thornton, and Bootstrap contributors", :name => "author"}/
-    %meta{:content => "Jekyll v3.8.6", :name => "generator"}/
     %link{:href => image_path("apple-touch-icon.png"), :rel => "apple-touch-icon", :sizes => "180x180"}/
     %link{:href => image_path("favicon-32x32.png"), :rel => "icon", :sizes => "32x32", :type => "image/png"}/
     %link{:href => image_path("favicon-16x16.png"), :rel => "icon", :sizes => "16x16", :type => "image/png"}/
-    %title Journaled
+    %title Noted
     = csrf_meta_tags
     = csp_meta_tag
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
